<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />
            <!-- Name field -->
            <EditText
                android:id="@+id/item_name"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/item_name_hint"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                android:text="@string/item_price"
                style="@style/CategoryStyle" />
            <!-- Name field -->
            <EditText
                android:id="@+id/item_price"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/item_price_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                android:text="@string/item_suplier_email"
                style="@style/CategoryStyle" />
            <!-- Name field -->
            <EditText
                android:layout_weight="2"
                android:id="@+id/email"
                android:hint="@string/item_suplier_email_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/items_in_stock" />
            <!-- Name field -->
            <TextView
                android:id="@+id/items_in_stock"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:textColor="#000000"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                android:text="@string/record_an_order"
                style="@style/CategoryStyle" />
            <!-- Name field -->
            <EditText
                android:layout_weight="1"
                android:id="@+id/order_quantity_edit_field"
                android:hint="0"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/record_order"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/record_order"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                android:layout_weight="1"
                android:text="@string/receive_shipment"
                style="@style/CategoryStyle" />
            <!-- Name field -->

            <EditText
                android:layout_weight="1"
                android:id="@+id/shipment_quantity_edit_field"
                android:hint="0"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/record_shipment"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/record_shipment"/>
        </LinearLayout>

        <ImageView
            android:src="@drawable/no_image"
            android:id="@+id/item_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="#ffffff" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_gravity="center"
            android:text="@string/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/order_item_by_mail"
            android:layout_gravity="center"
            android:text="@string/place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>